--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,28 +9,28 @@
   weight = 10
 
 [[main]]
-  name = "Blog"
-  url = "#posts"
-  weight = 20
-
-[[main]]
   name = "Projects"
   url = "#projects"
-  weight = 30
+  weight = 15
+
+[[main]]
+  name = "Skills"
+  url = "#skills"
+  weight = 20
 
 [[main]]
   name = "Publications"
   url = "#publications"
-  weight = 40
+  weight = 25
 
-# [[main]]
-#   name = "Contact"
-#   url = "#contact"
-#   weight = 70
+[[main]]
+  name = "Blog"
+  url = "blog"
+  weight = 30
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
 [[main]]
    name = "CV"
    url = "files/cv.pdf"
-   weight = 60
+   weight = 35
