--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -48,10 +48,10 @@ weight = 17
   url = "#publications"
   weight = 25
 
-[[main]]
-  name = "Blog"
-  url = "blog"
-  weight = 30
+# [[main]]
+#   name = "Blog"
+#   url = "blog"
+#   weight = 30
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
